fix btn filter word wrap issue

--- a/54tt_backend/public/views/tp/css/tp-m.less
+++ b/54tt_backend/public/views/tp/css/tp-m.less
@@ -33,11 +33,11 @@
     }
     .sponsor_categories {
       height: 35px;
-      border: 1px solid red;
+      //border: 1px solid red;
       text-align: center;
       min-width: 60px;
       float: left;
-      margin-right: 8px;
+      //margin-right: 8px;
       line-height: 2;
       background-color: palevioletred;
       color: white;
